# osdev

./: .gdb_history  .gitignore  Makefile  abort.c  abort.h  acpi.c  acpi.h  apic.h  assert.h  bootloader.ld  compiler.h  config.h  gdt.s  io.h  irq.c  irq.h  irq.s  irq_handler.s  kernel.c  kernel.h  kernel64.c  kernel64.rs  memory.c  memory.h  msr.h  stage1.s  stage2.s  std.c  std.h  textmode.c  textmode.h  types.h  vm.h  x86_64.ld
kernel/: Cargo.toml  x86_64.json
kernel/.cargo/: config.toml
kernel/src/: kernel64.rs  memory.rs  textmode.rs  vm.rs
